solving package error

--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "ai-project-management-backend",
   "version": "1.0.0",
   "description": "AI-Integrated Project Management Application Backend with real-time chat and mentor access",
