--- a/client/package.json
+++ b/client/package.json
@@ -16,42 +16,42 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
-    "socket.io-client": "^4.6.1",
-    "@tanstack/react-query": "^5.12.2",
-    "zustand": "^4.4.7",
-    "date-fns": "^2.30.0",
-    "react-hook-form": "^7.48.2",
-    "react-hot-toast": "^2.4.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.1.0",
+    "@tanstack/react-query": "^5.12.2",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-router-dom": "^6.20.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.1.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.3.6",
-    "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16"
+    "vite": "^6.4.1"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": ">=18.19.1",
     "npm": ">=9.0.0"
   }
 }
